--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -23,7 +23,7 @@ body {
     margin-top: 2em;
 }
 .card-perfil {
-    background-color: #19def0 !important;
+    background-color: #fa8a21fd !important;
     box-shadow: 0px 0px 5px #f5f5f5;
 }
 
@@ -96,7 +96,7 @@ body {
 @media (min-width: 900px) {
 
     .container-linear {
-        background: linear-gradient(to left, #ffff 60%, #19def0 40%);
+        background: linear-gradient(to left, #ffff 60%, #fa8a21fd 40%);
     }
     .card-col {
         display: flex;
